--- a/biodata/style.css
+++ b/biodata/style.css
@@ -197,3 +197,37 @@ input:checked+.slider:before {
 .lngEn:hover::before {
     opacity: 1;
 } */
+
+
+
+/* Profle Photo */
+#profilePhoto {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    margin-bottom: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+#largerProfilePhotoContainer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+#largerProfilePhoto {
+    max-width: 80%;
+    max-height: 80%;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
